// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Navigation/BreadCrumbs Primary 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="bredCrumbs"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1vtbjnd-MuiTypography-root-MuiLink-root"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        <h3
          className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
          data-cy="typography"
          style={
            {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          page1
        </h3>
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1vtbjnd-MuiTypography-root-MuiLink-root"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        <h3
          className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
          data-cy="typography"
          style={
            {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          page2
        </h3>
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <h3
        className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        page3
      </h3>
    </li>
  </ol>
</nav>
`;

exports[`Storyshots Navigation/BreadCrumbs Separator Custom 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="bredCrumbs"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1vtbjnd-MuiTypography-root-MuiLink-root"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        <h3
          className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
          data-cy="typography"
          style={
            {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          page1
        </h3>
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      &lt;
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1vtbjnd-MuiTypography-root-MuiLink-root"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        <h3
          className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
          data-cy="typography"
          style={
            {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          page2
        </h3>
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      &lt;
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <h3
        className="MuiTypography-root MuiTypography-subtitle1 css-rjc5iw-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        page3
      </h3>
    </li>
  </ol>
</nav>
`;

exports[`Storyshots Navigation/BreadCrumbs With Icon 1`] = `
<nav
  aria-label="breadcrumb"
  className="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
  data-cy="bredCrumbs"
>
  <ol
    className="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1vtbjnd-MuiTypography-root-MuiLink-root"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
          data-cy="icon"
          data-testid="ScheduleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
          <path
            d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
        <h2
          className="MuiTypography-root MuiTypography-h6 css-tho60i-MuiTypography-root"
          data-cy="typography"
          style={
            {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          page1
        </h2>
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1vtbjnd-MuiTypography-root-MuiLink-root"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        <h2
          className="MuiTypography-root MuiTypography-h6 css-tho60i-MuiTypography-root"
          data-cy="typography"
          style={
            {
              "alignItems": "center",
              "display": "flex",
            }
          }
        >
          page2
        </h2>
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 css-tho60i-MuiTypography-root"
        data-cy="typography"
        style={
          {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-189ox0l-MuiSvgIcon-root"
          data-cy="icon"
          data-testid="AccessibilityIcon"
          focusable="false"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm9 7h-6v13h-2v-6h-2v6H9V9H3V7h18v2z"
          />
        </svg>
        page3
      </h2>
    </li>
  </ol>
</nav>
`;
